--- a/Laundry.css
+++ b/Laundry.css
@@ -100,6 +100,11 @@ a{
     background-repeat: no-repeat;
     position: relative;
 }
+
+/* fa text-color */
+.text-light-green {
+    color: #028102e7; /* Use your desired shade of light green */
+}
     
 
 
